Fixed scrolling and added extra spacing for admin menu.

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -128,5 +128,11 @@
 }
 
 .navbar {
+	position: fixed;
+	margin-bottom: 0px;
+}
+
+.navbar-relative {
+	position: relative;
 	margin-bottom: 0px;
 }
